infrastructure_modules/vpc/4-VPC.tf
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr_block
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.project_name}-terraform-vpc-${var.vpc_name}"
  }
}
